--- a/app/views/home/welcome.html.haml
+++ b/app/views/home/welcome.html.haml
@@ -1,1 +1,7 @@
-welcome
+
+- if user_signed_in?
+  = "Signed in as #{current_user.email}. Not you?"
+  = link_to "Sign out", destroy_user_session_path
+
+- else
+  = raw "#{link_to "Sign up", new_user_registration_path} or #{link_to "sign in", new_user_session_path}"
