--- a/public/stylesheets/flash.css
+++ b/public/stylesheets/flash.css
@@ -1,57 +1,53 @@
-#flash_area {
-  background: #eee;
-  color: #000;
-  padding: 15px;
-  margin-top: 15px;
-  border: 1px solid #666;
-  text-align: justify;
-  border-radius : 10px;
-  -moz-border-radius: 10px;
-  -webkit-border-radius: 10px;
+.user_noticeC {
+    background: #eee;
+    color: #000;
+    padding: 15px;
+    margin-bottom: 15px;
+    border: 1px solid #666;
+    text-align: justify;
+    border-radius : 10px;
+    -moz-border-radius: 10px;
+    -webkit-border-radius: 10px;
 }
-#flash_area a,
-#flash_area a:visited {
-  text-decoration: underline;
-  color: #000;
+.user_noticeC a,
+.user_noticeC a:visited {
+    text-decoration: underline;
+    color: #000;
 }
-#flash_area .debug {
-  background: #eee;
-  color: #000;
+.user_noticeC.debug {
+    background: #eee;
+    color: #000;
 }
-#flash_area .notice {
-  background-color: #cfc;
-  color: #000;
+.user_noticeC.notice {
+    background-color : #7FB86B;
+    color: #000;
 }
-#flash_area .warning {
-  background: #ECE356;
-  border-color: #aa0;
-  color: #000;
+.user_noticeC.warning {
+    background: #ECE356;
+    border-color: #aa0;
+    color: #000;
 }
-#flash_area .error {
-  background: #FFEFEF;
-  color: #DC4040;
-  border-color: #C07373;
+.user_noticeC.error {
+    background: #FFEFEF;
+    color: #DC4040;
+    border-color: #C07373;
 }
-#flash_area .error a,
-#flash_area .error a:visited {
-  color: #DC4040;
+.user_noticeC.error a,
+.user_noticeC.error a:visited {
+    color: #DC4040;
 }
-
-#flash_area ol,
-#flash_area ul {
-  padding-left: 2em;
-  padding-right: 1em;
+.user_noticeC ol,
+.user_noticeC ul {
+    padding-left: 2em;
+    padding-right: 1em;
 }
-
-#flash_area .flash_message {
-  margin-bottom: .5em;
+.user_noticeC.flash_message {
+    margin-bottom: .5em;
 }
-
-#flash_area .flash_message .icon {
-  vertical-align: middle;
-  padding-bottom: 4px;
+.user_noticeC.flash_message .icon {
+    vertical-align: middle;
+    padding-bottom: 4px;
 }
-
 .flash_message.message {
-  margin-top: 1em;
+    margin-top: 1em;
 }
