--- a/app/views/layouts/application/_header.haml
+++ b/app/views/layouts/application/_header.haml
@@ -1,5 +1,6 @@
 %div.yui3-u-1-3
-  = image_tag '/images/transparent.gif', :id => 'main_logo', :class => 'app_sprite', :alt => 'eHouseOffers.com: Professional Home Buyers'
-  
+  - logo = image_tag '/images/transparent.gif', :id => 'main_logo', :class => 'app_sprite', :alt => 'eHouseOffers.com: Professional Home Buyers'
+  = link_to_unless current_page?(root_url), logo, root_url
+
 %div.yui3-u-5-24.right
   = image_tag '/images/transparent.gif', :id => 'free_consult', :class => 'app_sprite', :alt => 'Call 866.384.9068'
