--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -25,7 +25,7 @@ body {
     width  : 196px;
     height : 34px;
     position : absolute;
-    right : 2px;
+    right : 5px;
     top   : 38px;
 }
 /* ------------------ Menu --------------- */
@@ -94,13 +94,6 @@ html* div#content { font-size : .9em; }
     font-size : .8em;
 }
 html* #footerC { font-size : .7em; }
-#footerC a {
-    color : #7fb86b;
-    text-decoration : none;
-}
-#footerC a:hover {
-    text-decoration : underline;
-}
 #footerC #footer {
     width : 803px;
     position : absolute;
@@ -142,6 +135,9 @@ div#f_right {
     text-align : center;
     color : #7FB86B;
 }
+#f_signin a {
+    float : none;
+}
 
 #footer #follow_us {
     float : right;
@@ -173,20 +169,62 @@ div#f_right {
 .right { float : right; }
 .left  { float : left; }
 
-/*------------Clearfix : stolen from blueprint ---------------------*/
+a {
+    color : #7fb86b;
+    text-decoration : none;
+}
+a:hover {
+    text-decoration : underline;
+}
+textarea,
+input[type="text"],
+input[type="password"] {
+    padding : 4px;
+    border  : 1px solid #dadada;
+    color   : #333;
+}
+label.empty {
+    color : #999;
+}
+.field {
+    margin-bottom : 10px;
+}
+
+/* green box with cream bg. For example, see new seller registration */
+.box {
+    border : 1px solid #d4e3a9;
+    color : #7a7a7a;
+    background-color : #f0f3da;
+    border-radius : 10px;
+    -moz-border-radius: 10px;
+    -webkit-border-radius: 10px;
+}
+.box div.box_gutter {
+    padding : 17px 15px;
+}
+
+
+
+/*------------ Stolen from Blueprint ---------------------*/
 .clearfix:after, .container:after {content:"\0020";display:block;height:0;clear:both;visibility:hidden;overflow:hidden;}
 .clearfix, .container {display:block;}
 .clear {clear:both;}
 html * .clearfix.ie_stretch{ width:100%}
 
+hr {background:#ececec;color:#ececec;clear:both;float:none;width:100%;height:.1em;margin:0 0 1.45em;border:none;}
+hr.space {background:#fff;color:#fff;visibility:hidden;}
+hr.indent{margin : 0 5%;width:90%;}
 
 
-
-
-
-
-
-
-
-
+/*------------ My own custom yui3 units ----------*/
+.yui3-u-11-48, .yui3-u-15-48, .yui3-u-35-48 { 
+    display        : inline-block; /* copied from http://yui.yahooapis.com/3.2.0/build/cssgrids/grids-min.css */
+    letter-spacing : normal;       /* these are base styles for all the original yui3 units                   */
+    vertical-align : top;
+    word-spacing   : normal;
+}
+.yui3-u-11-48 { width : 22.91%; }
+.yui3-u-15-48 { width : 31.25%; }
+.yui3-u-35-48 { width : 72.91%; }
+.yui3-u-1-3   { width : 33%; } /* 3 of these did not fit on a single row */
 
