Switched up how we do banners. Rather than positioning multiple images over a set background (which was causign probems with jquery.ketchup error messages), I just created banner images

--- a/public/stylesheets/comp_data.css
+++ b/public/stylesheets/comp_data.css
@@ -1,28 +1,12 @@
 /* Start Sprites */
 .sprite { background : url(/images/sprites/seller-register-step2.png) no-repeat scroll 0px 500px transparent; }
-#get_cash_title  {
-    background-position : -1px -78px;
-    height : 30px;
-    width : 418px;
-    position : absolute;
-    top : 32px;
-    left : 182px;
-}
-#money_icon  {
-    background-position : -647px 1px;
-    height : 94px;
-    width  : 165px;
-    position : relative;
-    top : 0px;
-    left : 13px;
-}
 #step_two_comps {
     background-position : 0px 0px;
     height : 75px;
     width  : 592px;
 }
 input[type="image"] {
-    background-position : -423px -75px;
+    background-position : -595px 0px;
     height : 47px;
     width  : 223px;
     margin : 16px 0 0 58px;
@@ -30,19 +14,13 @@ input[type="image"] {
 /* END Sprites */
 
 #mainC img#top {
-    background-position : 0px -350px;
-    height : 88px;
+    height : 96px;
+    background : url(/images/page_banners/seller-listing-register-step1.png) no-repeat scroll 0px 0px transparent;
 }
-#mainC div#content { position : relative; padding : 0px; }
-#titlebarC {
-    position : absolute;
-    left   : 0;
-    top    : -84px;
-    height : 84px;
-    width  : 953px;
-}
+#mainC div#content { padding : 0px; }
+
 #step_two_contentC {
-    padding : 35px 33px;
+    padding : 27px 33px;
 }
 div#form_gutter {
     padding : 25px 0 0 29px;
