1) setup banner/menu arrow for all major pages which includes basic index, css file and new page_banners images directory

--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -32,6 +32,7 @@
     = render :partial => 'layouts/application/menu'
     
   %div#mainC
+    %div#tab_arrow &nbsp;
     = image_tag '/images/transparent.gif', :id => 'top', :class => 'app_sprite'
     %div#content
       - if content_for?(:page_title)
