--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -65,6 +65,16 @@ body {
 /* ------------------ Main --------------- */
 #mainC {
     margin-bottom : 19px;
+    position : relative;
+}
+#mainC div#tab_arrow {
+    background : url(/images/sprites/application.png) repeat-x scroll -316px -324px transparent;
+    width  : 25px;
+    height : 14px;
+    position : absolute;
+    top : 0;
+    left : 0;
+    display : none;
 }
 #mainC img#top {
     background-position : -0px -235px;
@@ -121,12 +131,14 @@ div#f_right {
 
 #footer p {
     margin-bottom : 8px;
+    font-size : 0.85em;
 }
 #footer #copyright {
     float : left;
     background-position : -510px -289px;
     height : 14px;
     width  : 14px;
+    margin : -2px 3px 0 0;
 }
 #footer_links a { float : left; }
 #footer_links div.delimeter {
@@ -165,10 +177,44 @@ div#f_right {
     width  : 145px;
 }
 
-/*------------------------*/
-.right { float : right; }
-.left  { float : left; }
 
+/* green box with cream bg. For example, see new seller registration */
+.box {
+    border : 1px solid #d4e3a9;
+    color : #7a7a7a;
+    background-color : #f0f3da;
+    border-radius : 10px;
+    -moz-border-radius: 10px;
+    -webkit-border-radius: 10px;
+}
+.box div.box_gutter {
+    padding : 17px 15px;
+}
+
+/*------------ Stolen from Blueprint ---------------------*/
+.clearfix:after, .container:after {content:"\0020";display:block;height:0;clear:both;visibility:hidden;overflow:hidden;}
+.clearfix, .container {display:block;}
+.clear {clear:both;}
+html * .clearfix.ie_stretch{ width:100%}
+
+hr {background:#ececec;color:#ececec;clear:both;float:none;width:100%;height:.1em;margin:0 0 1.45em;border:none;}
+hr.space {background:#fff;color:#fff;visibility:hidden;}
+hr.indent{margin : 0 5%;width:90%;}
+
+
+/*------------ My own custom yui3 units ------------------*/
+.yui3-u-11-48, .yui3-u-15-48, .yui3-u-35-48 { 
+    display        : inline-block; /* copied from http://yui.yahooapis.com/3.2.0/build/cssgrids/grids-min.css */
+    letter-spacing : normal;       /* these are base styles for all the original yui3 units                   */
+    vertical-align : top;
+    word-spacing   : normal;
+}
+.yui3-u-11-48 { width : 22.91%; }
+.yui3-u-15-48 { width : 31.25%; }
+.yui3-u-35-48 { width : 72.91%; }
+.yui3-u-1-3   { width : 33%; } /* 3 of these did not fit on a single row */
+
+/*---------------- Site Wide Element Changes --------------*/
 a {
     color : #7fb86b;
     text-decoration : none;
@@ -190,41 +236,7 @@ label.empty {
     margin-bottom : 10px;
 }
 
-/* green box with cream bg. For example, see new seller registration */
-.box {
-    border : 1px solid #d4e3a9;
-    color : #7a7a7a;
-    background-color : #f0f3da;
-    border-radius : 10px;
-    -moz-border-radius: 10px;
-    -webkit-border-radius: 10px;
-}
-.box div.box_gutter {
-    padding : 17px 15px;
-}
-
-
-
-/*------------ Stolen from Blueprint ---------------------*/
-.clearfix:after, .container:after {content:"\0020";display:block;height:0;clear:both;visibility:hidden;overflow:hidden;}
-.clearfix, .container {display:block;}
-.clear {clear:both;}
-html * .clearfix.ie_stretch{ width:100%}
-
-hr {background:#ececec;color:#ececec;clear:both;float:none;width:100%;height:.1em;margin:0 0 1.45em;border:none;}
-hr.space {background:#fff;color:#fff;visibility:hidden;}
-hr.indent{margin : 0 5%;width:90%;}
-
-
-/*------------ My own custom yui3 units ----------*/
-.yui3-u-11-48, .yui3-u-15-48, .yui3-u-35-48 { 
-    display        : inline-block; /* copied from http://yui.yahooapis.com/3.2.0/build/cssgrids/grids-min.css */
-    letter-spacing : normal;       /* these are base styles for all the original yui3 units                   */
-    vertical-align : top;
-    word-spacing   : normal;
-}
-.yui3-u-11-48 { width : 22.91%; }
-.yui3-u-15-48 { width : 31.25%; }
-.yui3-u-35-48 { width : 72.91%; }
-.yui3-u-1-3   { width : 33%; } /* 3 of these did not fit on a single row */
-
+/*------------ My own custom -----------------------------*/
+.right  { float : right; }
+.left   { float : left; }
+.hidden { display : none; }
