More mass development. major milestones include js slider and new seller form for all the non-home pages

--- a/app/views/contact/new.haml
+++ b/app/views/contact/new.haml
@@ -1,3 +1,7 @@
+:ruby
+  # extra_css('contact')
+
+= render "shared/breadcrumb", :crumbs => [[:home, root_path], [:contact_us, nil]]
 
 = form_for @message, :url => contacts_path, :method => :post do |f|
   = render :partial => 'shared/user_notice', :locals => {:model_obj => @message}
