--- a/app/views/seller_listings/thank_you.haml
+++ b/app/views/seller_listings/thank_you.haml
@@ -4,7 +4,7 @@
 -# Until we get the image pieces, use one big image
   %div.box_contentC
     %div.box
-      %div.box_gutter
+      %div.gutter
         = image_tag '/images/transparent.gif', :id => 'thanks_for_choosing', :class => 'sprite', :alt => 'Thanks for choosing eHouseOffers.com'
       
         %strong
@@ -20,7 +20,7 @@
 
 %div#discountsC.box_contentC
   %div.box
-    %div.box_gutter
+    %div.gutter
       .yui3-u-1-3
         .yui3-u-5-24
           &nbsp;
