--- a/public/stylesheets/reasons_to_sell.css
+++ b/public/stylesheets/reasons_to_sell.css
@@ -9,6 +9,9 @@
     background : url(/images/page_banners/reasons_to_sell.png) no-repeat scroll 0px 0px transparent;
     height : 100px;
 }
+ul.breadcrumbC {
+    margin-top : 14px;
+}
 
 
 /* Start Sprites */
