--- a/public/stylesheets/spotlight.css
+++ b/public/stylesheets/spotlight.css
@@ -9,7 +9,9 @@
     background : url(/images/page_banners/spotlight.png) no-repeat scroll 0px 0px transparent;
     height : 106px;
 }
-
+ul.breadcrumbC {
+    margin-top : 10px;
+}
 
 /* Start Sprites */
 .sprite { background : url(/images/sprites/spotlight.png) no-repeat scroll 0px 500px transparent; }
