--- a/public/stylesheets/thank_you.css
+++ b/public/stylesheets/thank_you.css
@@ -58,7 +58,7 @@
     padding-top : 21px;
     padding-bottom : 10px;
 }
-#discountsC .box_gutter {
+#discountsC .gutter {
     padding : 36px 30px 36px 50px;
 }
 div#discountsC h4 {
