--- a/app/views/home/terms.haml
+++ b/app/views/home/terms.haml
@@ -1,1 +1,4 @@
-terms of service
+:ruby
+  # extra_css('terms')
+
+= render "shared/breadcrumb", :crumbs => [[:home, root_path], [:terms_of_service, nil]]
