--- a/app/views/seller_listings/comp_data.haml
+++ b/app/views/seller_listings/comp_data.haml
@@ -3,7 +3,7 @@
 
 %div#step_two_contentC
   %div.box
-    %div.box_gutter
+    %div.gutter
       = image_tag '/images/transparent.gif', :id => 'step_two_comps', :class => 'sprite', :alt => 'Step 2: Help Identify Comparable Homes'
 
       %div#form_gutter
