--- a/app/views/seller_listings/new.html.haml
+++ b/app/views/seller_listings/new.html.haml
@@ -1,18 +1,10 @@
 :ruby
-  extra_js('jquery.ketchup','jquery.default_values')
-  extra_css('jquery.ketchup','new_seller_listing')
+  extra_css('new_seller_listing')
 
 %div#step_one_contentC
   %div.box
-    %div.box_gutter
+    %div.gutter
       = image_tag '/images/transparent.gif', :id => 'step_one_register', :class => 'sprite', :alt => 'Step 1: Register'
 
       %div#form_gutter
         = render :partial => 'seller_listings/form'
-
-
-:javascript
-  $(document).ready(function() {
-    $('#new_seller_listing').ketchup();
-    $('#new_seller_listing').default_form_values();
-  });
