--- a/app/views/trends/index.html.haml
+++ b/app/views/trends/index.html.haml
@@ -1,4 +1,13 @@
 :ruby
   extra_css('trends')
 
+= render "shared/breadcrumb", :crumbs => [[:home, root_path], [:trends, nil]]
+
+%div.xs_two_col.yui3-g
+  %div#left_col.yui3-u-33-48
+    left col
+
+  %div#right_col.yui3-u-7-24
+    = render :partial => "shared/seller_signup"
+
 
