--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -155,9 +155,9 @@ div#f_right {
     float : right;
     background-color : #e3edbf;
     padding : 6px 5px 2px 8px;
-    border-radius : 4px;
-    -moz-border-radius: 4px;
-    -webkit-border-radius: 4px;
+    border-radius : 5px;
+    -moz-border-radius: 5px;
+    -webkit-border-radius: 5px;
 }
 #follow_us img {
     height : 24px;
@@ -183,11 +183,11 @@ div#f_right {
     border : 1px solid #d4e3a9;
     color : #7a7a7a;
     background-color : #f0f3da;
-    border-radius : 10px;
-    -moz-border-radius: 10px;
-    -webkit-border-radius: 10px;
+    border-radius : 5px;
+    -moz-border-radius: 5px;
+    -webkit-border-radius: 5px;
 }
-.box div.box_gutter {
+.box div.gutter {
     padding : 17px 15px;
 }
 
@@ -203,7 +203,7 @@ hr.indent{margin : 0 5%;width:90%;}
 
 
 /*------------ My own custom yui3 units ------------------*/
-.yui3-u-11-48, .yui3-u-15-48, .yui3-u-35-48 { 
+.yui3-u-11-48, .yui3-u-15-48, .yui3-u-33-48, .yui3-u-35-48 { 
     display        : inline-block; /* copied from http://yui.yahooapis.com/3.2.0/build/cssgrids/grids-min.css */
     letter-spacing : normal;       /* these are base styles for all the original yui3 units                   */
     vertical-align : top;
@@ -211,12 +211,22 @@ hr.indent{margin : 0 5%;width:90%;}
 }
 .yui3-u-11-48 { width : 22.91%; }
 .yui3-u-15-48 { width : 31.25%; }
+.yui3-u-33-48 { width : 68.75%; }
 .yui3-u-35-48 { width : 72.91%; }
-.yui3-u-1-3   { width : 33%; } /* 3 of these did not fit on a single row */
+
+/*
+    Bug? The below classes do not work. For example, three .yui3-u-1-3 elements do not fit on a single row. Simlarly,
+    One .yui3-u-1-3 and one yui3-u-2-3 do not fit on a single row either
+    
+    Nope, not a bug. Just make sure they are inside a .yui3-g container div
+*/
+/*.yui3-u-1-3   { width : 33.15%; }*/
+/*.yui3-u-2-3   { width : 66.3%; }*/
+
 
 /*---------------- Site Wide Element Changes --------------*/
 a {
-    color : #7fb86b;
+    color : #7FB86B;
     text-decoration : none;
 }
 a:hover {
@@ -236,7 +246,45 @@ label.empty {
     margin-bottom : 10px;
 }
 
+/* The most common, x-site content two-col setup */
+.xs_two_col .left_col  { }
+.xs_two_col .right_col { margin-left : 10px; }
+
 /*------------ My own custom -----------------------------*/
 .right  { float : right; }
 .left   { float : left; }
 .hidden { display : none; }
+
+.rArr { /* right arrow */
+    background : url(/images/sprites/application.png) repeat-x scroll -513px -305px transparent;
+    height : 9px;
+    width  : 9px;
+    vertical-align : middle;
+}
+
+/*---------------- Breadcrumb ---------------------------*/
+ul.breadcrumbC {
+    font-size : .75em;
+    margin : 5px 0 0px 0;
+    padding : 0 0 9px 0;
+    color : #53aa47;
+}
+ul.breadcrumbC a {
+    color : #53aa47;
+}
+ul.breadcrumbC li {
+    list-style : none;
+    float : left;
+    margin-left : .5em;
+    line-height : 2em;
+}
+ul.breadcrumbC li#crumb_home {
+    margin-left : 0;
+}
+/* (bigger) right arrow specifically for the home page breadcrumb. All the others use .rArr*/
+li#crumb_home .rArr { 
+    background : url(/images/sprites/application.png) repeat-x scroll -343px -324px transparent;
+    height : 14px;
+    width  : 14px;
+    vertical-align : middle;
+}
