1) fixed bug slider using the wrong thing to create links to guide pages 2) css tweaks for scaffolded pages

--- a/app/views/devise/passwords/new.html.haml
+++ b/app/views/devise/passwords/new.html.haml
@@ -1,9 +1,18 @@
+:ruby
+  extra_css('scaffold')
+
+
 %h2 Forgot your password?
 = form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :post }) do |f|
   = devise_error_messages!
-  %p
+
+  .field
     = f.label :email
-    %br/
     = f.text_field :email
-  %p= f.submit "Send me reset password instructions"
+
+  .actions
+    = f.submit "Send me reset password instructions"
+
+
+
 = render :partial => "devise/shared/links"
