--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -2,6 +2,8 @@
   header(:title, 'Sign Up')
   page_title 'Sign Up'
 
+  extra_css('scaffold')
+
 = form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f|
   = render :partial => 'shared/user_notice', :locals => {:model_obj => resource}
 
@@ -15,6 +17,7 @@
       = f.label field_name
       = f.password_field field_name
 
-  %p= f.submit "Sign up"
+  .actions
+    = f.submit "Sign up"
 
 = render :partial => "devise/shared/links"
