--- a/public/stylesheets/scaffold.css
+++ b/public/stylesheets/scaffold.css
@@ -1,11 +1,12 @@
 /* forms */
-h1 {
+h1,h2 {
     font-size : 1.4em;
     font-weight : bold;
     color : #57662f;
     border-bottom : 1px solid #57662f;
-    margin-bottom : 10px;
+    margin-bottom : 20px;
 }
+h2 { font-size : 1.2em; margin-bottom : 15px; }
 .field {}
 .field label {
     display : block;
@@ -26,6 +27,10 @@ h1 {
 }
 .field textarea {
     height : 200px;
+}
+
+.actions {
+    margin : 10px 0;
 }
 
 /* show */
