--- a/app/views/layouts/application/_footer.haml
+++ b/app/views/layouts/application/_footer.haml
@@ -37,5 +37,5 @@
     %p
       Get a Home Offer from a Qualified Local Buyer
       
-    = image_tag '/images/transparent.gif', :id => 'get_home_offer', :class => 'app_sprite', :alt => 'Get a Home Offer!'
-      
+    - offer_btn = image_tag '/images/transparent.gif', :id => 'get_home_offer', :class => 'app_sprite', :alt => 'Get a Home Offer!'
+    = link_to offer_btn, new_seller_listing_path
