--- a/app/views/layouts/application/_header.haml
+++ b/app/views/layouts/application/_header.haml
@@ -1,6 +1,16 @@
-%div.yui3-u-1-3
-  - logo = image_tag '/images/transparent.gif', :id => 'main_logo', :class => 'app_sprite', :alt => 'eHouseOffers.com: Professional Home Buyers'
-  = link_to_unless current_page?(root_url), logo, root_url
+%div.yui3-g
+  %div.yui3-u-1-3
+    - logo = image_tag '/images/transparent.gif', :id => 'main_logo', :class => 'app_sprite', :alt => 'eHouseOffers.com: Professional Home Buyers'
+    = link_to_unless current_page?(root_url), logo, root_url
 
-%div.yui3-u-5-24.right
-  = image_tag '/images/transparent.gif', :id => 'free_consult', :class => 'app_sprite', :alt => 'Call 866.384.9068'
+  %div.yui3-u-5-24.right
+    %div#request_offerC.yui3-g
+      %div.yui3-u-2-3
+        %p
+          Get a Home Offer from a
+          %br
+          Qualified Local Buyer
+      %div.yui3-u-1-3
+        - offer_btn = image_tag '/images/transparent.gif', :id => 'request_offer', :class => 'app_sprite', :alt => 'Request an Offer'
+        = link_to offer_btn, new_seller_listing_path
+    = image_tag '/images/transparent.gif', :id => 'free_consult', :class => 'app_sprite', :alt => 'Call 866.384.9068'
