Tons of stuff including 1) adding growls 2) adding the reasons to sell section of the site 3) adding will_paginate 3) clippy (flash driven copy to clipboard functionality) and more

--- a/app/views/guides/_guide.haml
+++ b/app/views/guides/_guide.haml
@@ -16,5 +16,5 @@
 
     - if teaser
       %p
-        = link_to image_tag('/images/transparent.gif', :class => 'read_full_article', :alt => 'Read Full Article'), guide_path(guide.url_friendly_title)
+        = link_to image_tag('/images/transparent.gif', :class => 'read_full_article', :alt => 'Read Full Article'), guide_path(guide.title_for_url)
     
