--- a/app/views/shared/_slider.haml
+++ b/app/views/shared/_slider.haml
@@ -2,6 +2,8 @@
   extra_js('jquery.slider')
   extra_css('jquery.slider')
 
+  image_size = image_size.present? ? image_size.intern : :medium
+
 %div.slider{:id => id}
   %div.slider_bg
   %div.scroll
@@ -9,7 +11,7 @@
       - collection.each_with_index do |object, idx|
         %div.panel{:id => "panel_#{idx+1}"}
           %div.inside
-            = image_tag object.photo.url(:medium), :alt => object.title, 'data-path' => send("#{object.class.name.downcase}_path", object.url_friendly_title)
+            = image_tag object.photo.url(image_size), :alt => object.title, 'data-path' => object_path(object)
 
   %h2 &nbsp;
 
