--- a/public/stylesheets/what_we_do.css
+++ b/public/stylesheets/what_we_do.css
@@ -2,7 +2,7 @@ div#what_we_doC {
     width : 598px;
 }
 div#what_we_doC div#c_header {
-    margin-bottom : 20px;
+    padding-bottom : 20px;
 }
 img#get_an_offer_title{}
 img#get_an_offer_button {
